# hw-stats

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  pylintrc  pyproject.toml  requirements.txt
.githooks/: pre-commit
.github/workflows/: Acceptance.yml  PR-Acceptance.yml
hwstats/: __init__.py  backend.py  cli.py  frontend.py  log_config.py  models.py  monitor.py
hwstats/static/css/: shutdown.css  style.css
hwstats/templates/: base.html  index.html  plot.html  shutDown.html
tests/: conftest.py  test_backend.py  test_cpu_load.py  test_frontend.py  test_models.py
